Check if sender is account holder for otx offers. Fix tests.
