# services/trading-service/docs/swagger.json
@@ -2796,15 +2796,17 @@
             "type": "object",
             "required": [
                 "amount",
+                "asset_ownership_id",
                 "buyer_account_number",
                 "premium",
                 "price_per_stock",
-                "seller_id",
-                "settlement_date",
-                "stock_id"
+                "settlement_date"
             ],
             "properties": {
                 "amount": {
+                    "type": "integer"
+                },
+                "asset_ownership_id": {
                     "type": "integer"
                 },
                 "buyer_account_number": {
@@ -2816,14 +2818,8 @@
                 "price_per_stock": {
                     "type": "number"
                 },
-                "seller_id": {
-                    "type": "integer"
-                },
                 "settlement_date": {
                     "type": "string"
-                },
-                "stock_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -3647,7 +3643,7 @@
                 "status": {
                     "$ref": "#/definitions/model.OtcOfferStatus"
                 },
-                "stock_id": {
+                "stock_asset_id": {
                     "type": "integer"
                 },
                 "stock_name": {
@@ -3694,7 +3690,7 @@
                 "settlement_date": {
                     "type": "string"
                 },
-                "stock_id": {
+                "stock_asset_id": {
                     "type": "integer"
                 },
                 "stock_name": {
